--- a/k9mail/src/main/res/xml/account_settings_preferences.xml
+++ b/k9mail/src/main/res/xml/account_settings_preferences.xml
@@ -464,13 +464,34 @@
 
     <PreferenceScreen
         android:title="@string/account_settings_crypto"
-        android:key="crypto">
+        android:key="krypto">
 
-        <org.openintents.openpgp.util.OpenPgpListPreference
-            android:persistent="false"
-            android:key="crypto_app"
-            android:title="@string/account_settings_crypto_app" />
+        <PreferenceScreen
+            android:title="@string/account_settings_openpgp"
+            android:key="crypto">
+
+            <org.openintents.openpgp.util.OpenPgpListPreference
+                android:persistent="false"
+                android:key="crypto_app"
+                android:title="@string/account_settings_crypto_app" />
+
+        </PreferenceScreen>
+
+        <PreferenceScreen
+            android:title="@string/account_settings_smime"
+            android:key="smime">
+
+               <CheckBoxPreference
+                    android:persistent="false"
+                    android:key="smime_checkbox"
+                    android:dependency="account_notify"
+                    android:title="@string/account_settings_smime_checkbox_title"
+                    android:summary="@string/account_settings_smime_checkbox_text"
+                    android:defaultValue="false" />
+
+        </PreferenceScreen>
 
     </PreferenceScreen>
+
 
 </PreferenceScreen>
