copied much of openpgp-api

--- a/k9mail/src/main/res/layout/message_view_header.xml
+++ b/k9mail/src/main/res/layout/message_view_header.xml
@@ -251,5 +251,6 @@
     </LinearLayout>
 
     <include layout="@layout/message_view_openpgp_layout"/>
+    <include layout="@layout/message_view_smime_layout"/>
 
 </com.fsck.k9.view.MessageHeader>
