- smime preferences are now stored persistently - value is readable via Account.isSmimeEnabled()

--- a/k9mail/src/main/res/xml/account_settings_preferences.xml
+++ b/k9mail/src/main/res/xml/account_settings_preferences.xml
@@ -483,7 +483,7 @@
 
                <CheckBoxPreference
                     android:persistent="false"
-                    android:key="smime_checkbox"
+                    android:key="smime_enabled"
                     android:dependency="account_notify"
                     android:title="@string/account_settings_smime_checkbox_title"
                     android:summary="@string/account_settings_smime_checkbox_text"
